# NowPlaying-API

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: typos.yml
app/: api.py
async_spotify/: cache.py  client.py  client_test.py
const/: credentials.py
schemas/: error.py  root.py
