[tool.poetry]
name = "nowplaying-api"
version = "0.1.0"
description = "API to generate NowPlaying messages for multiple platform URLs"
authors = ["sushi-chaaaan <mail@sushichan.live>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "nowplaying_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
slowapi = "^0.1.7"
aiohttp = "^3.8.4"
uvicorn = "^0.21.1"
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.12.0", extras = ["jupyter"] }
mypy = "^0.991"
isort = "^5.11.4"
pyproject-flake8 = "^6.0.0-post.0"
flake8-isort = "^6.0.0"
poethepoet = "^0.18.0"
python-dotenv = "^0.21.1"
pre-commit = "^3.1.0"
ipykernel = "^6.20.2"
requests = "^2.28.2"

[tool.black]
target-version = ["py310"]
line-length = 125

[tool.flake8]
max-line-length = 125
extend-exclude = [".venv"]
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 125
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
exclude = [".venv"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.poe.tasks]
# lint
lint.sequence = ["_mypy_stub", "_pflake8", "_isort-c", "_mypy"]
lint.ignore_fail = "return_zero"
_pflake8 = "poetry run pflake8 ."
_isort-c = "poetry run isort -c ."
_mypy = "poetry run mypy ."
_mypy_stub = "mypy --install-types --non-interactive"

# format
format.sequence = ["_black", "_isort"]
fmt.sequence = ["format"]
format.ignore_fail = "return_zero"
_black = "poetry run black ."
_isort = "poetry run isort ."

# export
export = "poetry export -f requirements.txt -o requirements.txt --only main --without-hashes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
